# remembook-api

./: .gitignore  Cargo.toml  Makefile.toml  compose copy.yaml  compose.yaml
.sqlx/: query-01303af6f57f29f7c1199ff67a1b3d30358ed8ae22e42822012c6973f20b9685.json  query-07672cf9194cbd85082fb5f01055a698ee3d3e6ba207b67456fadf792dcbae73.json  query-08663fba2cdd4d322c968224f6558703ced69c7acd34643cf1b5aea97c96d4e3.json  query-08fed4d3699921226400d00a6e1708f84c1832894e6672c8f3ff56b3f1f40f36.json  query-097330e9d6aa91743d8b854a7e34105174a349ac53b9f228fded8f90541158da.json  query-0c165b6f1906734faad38c5f6e448fca9f59b3fbe85a7e74c4538ac5add34fcb.json  query-0e4e3e1e0b81a536200ad5adad1bc2ec1ea7fc52bfa47aec0aafba20efbd469e.json  query-1b90938a0df8e35b086310ce8674d2487545e189aa0e23a077889de9f4966885.json  query-31f9d8c7ec761677c8df50077bf4fef714fc6a3cee3f0f55875fbdca3636e225.json  query-35a9ac112ab4a6d34185d1b27d05eb681912700c19940ddef65f01a98e36c71a.json  query-5339af1a58dbada8f034e0643c2c092b0e5f13182d45ee126d8eb90e2c89dac9.json  query-5ca386423d86a38da93557e32b2958a5cefc194cc191a6b2613e6b52a7fe680a.json  query-5ea34b61ad459ab74d93bc46ce3ee2bc86c8d58061bc46684717032842c568d1.json  query-5f8e85c185685ba3edaa183a548ec76fff8ff9c3a2aa67bfd4c21fe8bfb296a3.json  query-669bc9248b2e8f179cfd8f4181bd38e78bbeb7b4830d3058693523c96a2fb54e.json  query-6723d4c64c2ac30a3674162b1b2617073913dd775c3c6ed1074e07db55931bd3.json  query-685d4938a3a59083ccfaea9af50b7bdf28611e343b69b90f87a097ecbb0c706e.json  query-6a10fd32e876d877a1afc73d5da56900f8f95325c7b35f8abf9a455c5cd20233.json  query-7be0b407f23996dd16aa497affa22ccc69b6254bd6c5e98ba60d1fdd5f7a3fdb.json  query-80e1e5ffce09eeebd31ad18b3f34a4264eb02b8ae59dcbba4aceb9a5800635e5.json  query-969a139e96019f9ca8b0c23f0c1418eeab40b338d579e387c1b623857aa8385a.json  query-9ff126bf76b2498507d4741f56d6cc6fa3c35841d64d0398602d8dda42e9f51e.json  query-a0c0a6f00054398b9dab6934494d77ef90e57492c098d571d001146b5ec4174e.json  query-a3d258cd890edb4ddc7f9b0223767965da71600e71be586ee84d27d62e8856c4.json  query-a3f34a6a9f863b1b09183f6cb89e08601fcf9ae5b39ca42c38549b49387cbf3a.json  query-b1cc3f2c27304bfd36fc830c275b575a3558f8195c448f7c26b94bc0cd39ed24.json  query-be6d43f688afca4c8c4a9fda2424884353379764a9c2600c2472bfe51cb066b2.json  (+13 more)
adapter/: Cargo.toml
api/: Cargo.toml
api/src/: lib.rs  (+1 more)
shared/: Cargo.toml
shared/src/: error.rs  lib.rs  open_ai.rs
(+70 files in other folders)
